# strawberry-node

./: CMakeLists.txt  prj.conf
boards/: nrf52dk_nrf52832.overlay
src/: ble_lys.c  ble_lys.h  ble_util.c  ble_util.h  drv_ads1015.c  drv_ads1015.h  drv_analog.c  drv_analog.h  drv_load_point.c  drv_load_point.h  drv_mlx90614.c  drv_mlx90614.h  drv_sen0546.c  drv_sen0546.h  main.c
